--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ python = "^3.9"
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
 pytest-cov = "^3.0.0"
+python-semantic-release = "^7.22.0"
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
